grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: cattle-monitoring-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
spec:
  tls:
    - hosts:
        - grafana.lucasnet.int
        - grafana.lucasnet.org
      secretName: lucasnet-tls
  rules:
    - host: grafana.lucasnet.int
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rancher-monitoring-grafana
                port:
                  number: 80
